--- a/src/scss/blocks/__popular.scss
+++ b/src/scss/blocks/__popular.scss
@@ -36,6 +36,7 @@
     @media (max-width:1315px) {
         gap: 15px
     }
+
     /* Mobile */
     @media (max-width: 899px) {
         flex-direction: column;
@@ -91,6 +92,7 @@
     @media (max-width:1315px) {
         gap: 15px
     }
+
     /* Mobile */
     @media (max-width: 899px) {
         flex-direction: column;
@@ -117,7 +119,7 @@
     width: 300px;
     height: 311px;
     border-radius: 16px;
-    background: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-1.png);
+    background-image: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-1.png);
 
     background-position: center center;
     background-size: cover;
@@ -134,24 +136,33 @@
     width: 520px;
     height: 311px;
     border-radius: 16px;
-    background: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-2.png);
+    background-image: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-2.png);
 
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
+
     /* Mobile */
     @media (max-width: 899px) {
-      width: 350px;
-      background-size: contain;
+        width: 350px;
+        background-size: contain;
+    }
+
+    /* Mobile */
+    @media (max-width: 899px) {
+        background-position: center center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 244px;
     }
 }
 
 .popular__row-card-img-3 {
 
     width: 410px;
-    height:311px ;
+    height: 311px;
     border-radius: 16px;
-    background: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-3.png);
+    background-image: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-3.png);
 
     background-position: center center;
     background-size: cover;
@@ -159,9 +170,9 @@
 
     /* Mobile XS */
     @media (max-width:599px) {
-      width: 350px;
-      background-size: contain;
-      
+        width: 350px;
+        background-size: contain;
+
     }
 }
 
@@ -170,19 +181,22 @@
     width: 410px;
     height: 311px;
     border-radius: 16px;
-    background: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-4.png);
+    background-image: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-4.png);
 
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
 
 
-        /* Mobile XS */
-        @media (max-width:599px) {
-            width: 350px;
-            background-size: contain;
-            
-          }
+    /* Mobile XS */
+    @media (max-width:599px) {
+        width: 350px;
+        background-size: contain;
+        background-position:center center;
+
+        background-repeat: no-repeat;
+
+    }
 }
 
 
@@ -192,10 +206,11 @@
     width: 410px;
     height: 652px;
     border-radius: 16px;
-    background: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-5.png);
+    background-image: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-5.png);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
+
     /* Mobile */
     @media (max-width: 899px) {
         width: 350px;
