--- a/src/scss/blocks/__popular.scss
+++ b/src/scss/blocks/__popular.scss
@@ -165,7 +165,7 @@
     background-image: linear-gradient(2.86deg, rgba(19, 30, 58, 0.92) 16.358%, rgba(19, 30, 58, 0) 52.732%), url(./../img/popular/card-3.png);
 
     background-position: center center;
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
 
     /* Mobile XS */
