--- a/src/scss/blocks/__popular.scss
+++ b/src/scss/blocks/__popular.scss
@@ -145,7 +145,7 @@
     /* Mobile */
     @media (max-width: 899px) {
         width: 350px;
-        background-size: contain;
+        background-size: cover;
     }
 
     /* Mobile */
